[gd_scene load_steps=5 format=3 uid="uid://ceyqusnxxk6xr"]

[ext_resource type="Script" path="res://Entities/Coin/Coin.gd" id="1_ov43b"]
[ext_resource type="Texture2D" uid="uid://fyv11w0s8xj5" path="res://Sprites/Coins/Coins32x32.png" id="2_x6wvt"]
[ext_resource type="AudioStream" uid="uid://iau0l6g4fxt2" path="res://Audio/Coins/AudioCoinPickup.wav" id="3_bhioi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n7chb"]
radius = 128.0

[node name="Coin" type="Node2D"]
visibility_layer = 2
z_index = 2
script = ExtResource("1_ov43b")

[node name="CoinSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_x6wvt")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_n7chb")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bhioi")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
